2007-20-18  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-add-dialog.[ch]:
	* src/twitux-app.[ch]:
	* src/twitux-network.c:
	* src/Makefile.am: Add friends functions.

	* data/main.glade: Add friend Dialog.

	* src/twitux-about.c: Updated my broken e-mail
	address.

2007-10-11  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-parser.c: Add convert time.

2007-10-05  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-tweet-list.c: Add initial code to handle window
	size and list view wrap.

2007-10-05  Daniel Morales  <daniminas@gmail.com>

	* data/main.glade:
	* src/twitux-app.[ch]:
	* src/twitux-network.[ch]:
	* src/twitux-parser.[ch]: Switch from TreeView to TwituxTweetList.

2007-09-16  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-tweet-list.[ch]: create separate listview object.

2007-09-14  Brian Pepple  <bpepple@fedoraproject.org>

	* data/main.glade:
	* data/twitux.schemas.in:
	* src/twitux-network.c (network_timeout_new): : 
	* src/twitux-preferences.c: Add ability for user to set interval
	between timeline retrievals.

2007-09-12  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-network.c: remove network_timeout_stop
	function.

2007-09-12  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-parser.[ch]:
	* src/twitux-network.c: Add show UI notifications when reload
	timelines.

2007-09-11  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c:
	* src/twitux.h: Add auto reload current timeline.

2007-09-10  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-app.[ch]:
	* src/twitux-network.[ch]:
	* src/twitux-parser.[ch]: Add code to load avatars into
	liststore. 

2007-09-10  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c:
	* src/twitux-parser.c (twitux_parser_timeline): Intial work
	to get liststore in corect format for the ui.

	* configure.in:
	* libtwitux/Makefile.am:
	* libtwitux/twitux-avatar.[ch]: Make library to deal with
	avatar pixbuf.
